<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/application_icon_content_description"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@android:drawable/presence_online"
            app:tint="@color/light_grey"
            tools:ignore="ImageContrastCheck"/>

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/text_view_assigned_tests_legend"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/available_test_mark_content_description"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@android:drawable/presence_online"
            app:tint="@color/yellow"
            tools:ignore="ImageContrastCheck"/>

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/text_view_available_tests_legend"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/completed_test_mark_content_description"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@android:drawable/presence_online"
            app:tint="@color/green"
            tools:ignore="ImageContrastCheck"/>

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/text_view_completed_tests_legend"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/not_completed_test_mark_content_description"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@android:drawable/presence_online"
            app:tint="@color/red"
            tools:ignore="ImageContrastCheck"/>

        <TextView
            android:layout_gravity="start|center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/text_view_not_completed_tests_legend"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@android:drawable/presence_online"
            app:tint="@color/blue"
            android:contentDescription="@string/assigned_test_mark_content_description"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/text_view_notes_legend"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCloseLegend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/my_light_pink"
        android:text="@string/button_close_legend"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"/>

</LinearLayout>