<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/linearLayoutActivityCalendarView"
    android:orientation="vertical"
    tools:context=".CalendarViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp">

    <Button
        android:id="@+id/buttonPreviousMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_left"
        android:textColor="@color/my_pink"
        android:background="@null"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textViewMonthYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonNextMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_right"
        android:textColor="@color/my_pink"
        android:background="@null"
        android:textStyle="bold"
        android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMonday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_monday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewTuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_tuesday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewWednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_wednesday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewThursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_thursday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewFriday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_friday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewSaturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_saturday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/textViewSunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_sunday"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/grey"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCalendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/my_pink"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"/>
        
</LinearLayout>