<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCellDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageViewAvailableTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/available_test_mark_content_description"
            app:tint="@color/yellow"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

        <ImageView
            android:id="@+id/imageViewCompletedTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/completed_test_mark_content_description"
            app:tint="@color/green"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

        <ImageView
            android:id="@+id/imageViewNotCompletedTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/not_completed_test_mark_content_description"
            app:tint="@color/red"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

        <ImageView
            android:id="@+id/imageViewAssignedTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/assigned_test_mark_content_description"
            app:tint="@color/grey"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <ImageView
            android:id="@+id/imageViewNoteMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/note_mark_content_description"
            app:tint="@color/blue"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>