<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PsychologistProfileActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_pink"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_view_profile"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/buttonPsychologistProfileExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/button_exit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/my_light_pink"
                android:layout_gravity="center_vertical"
                tools:ignore="TextContrastCheck,VisualLintButtonSize"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/text_view_psychologist"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/application_icon_content_description"
            app:srcCompat="@drawable/pictures_psychologist"/>

        <TextView
            android:id="@+id/textViewPsychologistNameSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/textViewPsychologistBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/buttonRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/button_requests"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/my_light_pink"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/very_light_grey"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/text_view_sportsmen"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            tools:ignore="TextSizeCheck"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginBottom="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSportsmen"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

