<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SelectedSportsmanProfileActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_pink"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_view_profile"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal"
            android:text="@string/text_view_sportsman"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/application_icon_content_description"
            app:srcCompat="@drawable/pictures_sportsman"/>

        <TextView
            android:id="@+id/textViewSportsmanNameSurnameEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewSportsmanBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"/>



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
